--- a/index.html
+++ b/index.html
@@ -6,31 +6,59 @@
   <title>موقعي الرسمي - liwa872</title>
   <style>
     body {
-      font-family: Tahoma, Arial, sans-serif;
-      background: #f9f9f9;
-      text-align: center;
-      padding: 50px;
-    }
-    .box {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      display: inline-block;
-    }
-    h1 {
+      font-family: "Cairo", Tahoma, Arial, sans-serif;
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       color: #333;
     }
+    .box {
+      background: #fff;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      max-width: 500px;
+      width: 90%;
+      text-align: center;
+      animation: fadeIn 1s ease-in-out;
+    }
+    h1 {
+      color: #2193b0;
+      margin-bottom: 15px;
+    }
     p {
-      color: #666;
+      color: #555;
+      line-height: 1.6;
+    }
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 20px;
+      background: #2193b0;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    a:hover {
+      background: #176d80;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
   <div class="box">
     <h1>مرحبًا بك في موقعي الرسمي</h1>
-    <p>هذا الموقع تم إنشاؤه لإثبات ملكية التطبيق.</p>
-    <p><a href="app-ads.txt" target="_blank">عرض ملف app-ads.txt</a></p>
+    <p>هذا الموقع تم إنشاؤه لإثبات ملكية التطبيق.<br>
+       يمكنك الاطّلاع على ملف الإعلانات المصرح به من هنا:</p>
+    <a href="app-ads.txt" target="_blank">عرض ملف app-ads.txt</a>
   </div>
 </body>
 </html>
