--- a/index.html
+++ b/index.html
@@ -17,17 +17,28 @@
     }
     .box {
       background: #fff;
-      padding: 40px;
+      padding: 40px 30px;
       border-radius: 16px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.15);
       max-width: 500px;
       width: 90%;
       text-align: center;
       animation: fadeIn 1s ease-in-out;
+      position: relative;
+    }
+    .logo {
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      border: 4px solid #fff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      margin-top: -80px;
+      object-fit: cover;
+      background: #eee;
     }
     h1 {
       color: #2193b0;
-      margin-bottom: 15px;
+      margin: 15px 0;
     }
     p {
       color: #555;
@@ -55,6 +66,7 @@
 </head>
 <body>
   <div class="box">
+    <img src="logo.png" alt="شعار الموقع" class="logo">
     <h1>مرحبًا بك في موقعي الرسمي</h1>
     <p>هذا الموقع تم إنشاؤه لإثبات ملكية التطبيق.<br>
        يمكنك الاطّلاع على ملف الإعلانات المصرح به من هنا:</p>
